tdf#132832 calcAdjustedSize: Take max width into account

Actually take into account the preferred width when
calculating the size of radio button, checkbox and
hyperlink controls.

This e.g. makes word wrap work properly when the
multiline property is set for a checkbox, radio or hyperlink
control and the single line text exceeds the preferred width,
rather than keeping the whole text in one line that exceeds
the preferred width.

Change-Id: Id04668e4e1afe7c10a28468eff05cf04c10ae3c0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/93947
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>